finished for the night

--- a/contact.html
+++ b/contact.html
@@ -21,15 +21,18 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
                 <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About Me</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#" onClick="parent.location='contact.html'">Contact</a>
-            </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onClick="parent.location='home.html'">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onClick="parent.location='portfolio.html'">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onClick="parent.location='resume.html'">Resume</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onClick="parent.location='contact.html'">Contact</a>
+                    </li>
         </ul>
               <form class="form-inline">
                
@@ -48,11 +51,10 @@
               <div class="row">
                 <!--Grid column-->
                 <div class="col-md-12 mb-4 white-text text-center id: text">
-                  <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown" data-wow-delay="0.3s"><strong>Minimalist intro</strong></h1>
-                  <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
-                  <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Photography & design</strong></h5>
-                  <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">portfolio</a>
-                  <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">About me</a>
+                  <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>zane.deupree@gmail.com</strong></h5>
+                  <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>(817) 614-7077</strong></h5>
+                  <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>https://www.linkedin.com/in/zane-deupree/</strong></h5>
+
                 </div>
                 <!--Grid column-->
               </div>
