--- a/portfolio.html
+++ b/portfolio.html
@@ -43,24 +43,45 @@
         <!-- Navbar -->
         <!-- Full Page Intro -->
         <div class="view" style="background-image: url('https://lh3.googleusercontent.com/pw/ACtC-3dGl3tV94bTI8KHe1_I4wCdZ8QkGWnqdOii83oard4th0e0CPbazsCVi6hM-gAP6lWgAb684BRUhSiWsDEAuhoyad_WwWsSVJGgm3lj5NRdSsJDcR8m8WLeEBSgC002K_se2D5rfSDhWtRtXKuQroNb=w2574-h1716-no?authuser=0'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-          <!-- Mask & flexbox options-->
-          <div class="mask rgba-black-light align-items-center">
-            <!-- Content -->
             <div class="container">
-              <!--Grid row-->
-              <div class="row">
-                <!--Grid column-->
-                <div class="col-md-12 mb-4 white-text text-center id: text">
-                  <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown" data-wow-delay="0.3s"><strong>About Me</strong></h1>
-                  <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
-                  <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Seeking full time employment with formal educational experience in full-stack web development and cybersecurity</strong></h5>
-                 
+                <div class="row">
+                  <div class="col-12">
+                      <table class="table table-image">
+                        <thead>
+                          <tr>
+                            <th scope="col"></th>
+                            <th scope="col"></th>
+                            <th scope="col"></th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td class="w-25">
+                                <img src="https://lh3.googleusercontent.com/4xr6eLYvfVBudFOlpfkoT0K-zFj3PTKTeRAPfTyzcF_5iTg1iDCVx1VzLXwsOeCDUoD57NJcGZA=w640-h400-e365" class="img-fluid img-thumbnail" alt="Sheep">
+                            </td>
+                            <td>Name of Project</td>
+                            <td>Github Link</td>
+                          </tr>
+                          <tr>
+                            <td class="w-25">
+                                <img src="https://lh3.googleusercontent.com/4xr6eLYvfVBudFOlpfkoT0K-zFj3PTKTeRAPfTyzcF_5iTg1iDCVx1VzLXwsOeCDUoD57NJcGZA=w640-h400-e365" class="img-fluid img-thumbnail" alt="Sheep">
+                            </td>
+                            <td>Name of Project</td>
+                            <td>Github Link</td>
+                          </tr>
+                          <tr>
+                            <td class="w-25">
+                                <img src="https://lh3.googleusercontent.com/4xr6eLYvfVBudFOlpfkoT0K-zFj3PTKTeRAPfTyzcF_5iTg1iDCVx1VzLXwsOeCDUoD57NJcGZA=w640-h400-e365" class="img-fluid img-thumbnail" alt="Sheep">
+                            </td>
+                            <td>Name of Project</td>
+                            <td>Github Link</td>
+                          </tr>
+                          
+                        </tbody>
+                      </table>   
+                  </div>
                 </div>
-                <!--Grid column-->
               </div>
-              <!--Grid row-->
-            </div>
-            <!-- Content -->
           </div>
           <!-- Mask & flexbox options-->
         </div>
