--- a/resume.html
+++ b/resume.html
@@ -51,9 +51,8 @@
               <div class="row">
                 <!--Grid column-->
                 <div class="col-md-12 mb-4 white-text text-center id: text">
-                  <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown" data-wow-delay="0.3s"><strong>About Me</strong></h1>
-                  <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
-                  <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Seeking full time employment with formal educational experience in full-stack web development and cybersecurity</strong></h5>
+                  <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown" data-wow-delay="0.3s"><strong>{{resume place holder}}</strong></h1>
+                  
                  
                 </div>
                 <!--Grid column-->
