--- a/resume.html
+++ b/resume.html
@@ -51,7 +51,8 @@
               <div class="row">
                 <!--Grid column-->
                 <div class="col-md-12 mb-4 white-text text-center id: text">
-                  <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown" data-wow-delay="0.3s"><strong>{{resume place holder}}</strong></h1>
+                  <iframe src="https://docdro.id/EynqItS" width="100%" height="500px">
+                  </iframe>
                   
                  
                 </div>
